--- a/app/src/main/res/layout/items_devic_list.xml
+++ b/app/src/main/res/layout/items_devic_list.xml
@@ -1,41 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="20dp"
-    android:elevation="20dp"
-    android:layout_margin="8dp"
-    android:padding="16dp"
-    >
-     <androidx.constraintlayout.widget.ConstraintLayout
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:padding="16dp"
-         >
-         <TextView
-             app:layout_constraintStart_toStartOf="parent"
-             app:layout_constraintTop_toTopOf="parent"
-             app:layout_constraintBottom_toBottomOf="parent"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             style="@style/textcostom"
-             android:id="@+id/text_name"
-             android:text="name"/>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-         <TextView
-             android:id="@+id/text_numer"
-             style="@style/textcostom"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="numer"
-             app:layout_constraintBottom_toBottomOf="parent"
-             app:layout_constraintEnd_toEndOf="parent"
-             app:layout_constraintTop_toTopOf="parent" />
+    <data>
+        <variable
+            name="deviceItem"
+            type="com.example.paging_datas.room_data.model.Device" />
+    </data>
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:elevation="20dp"
+        android:padding="16dp"
+        app:cardCornerRadius="20dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/text_name"
+                style="@style/textcostom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{deviceItem.name}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/text_numer"
+                style="@style/textcostom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{deviceItem.number}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </com.google.android.material.card.MaterialCardView>
 
-</com.google.android.material.card.MaterialCardView>
+</layout>
