--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -12,7 +12,7 @@
         <com.google.android.material.card.MaterialCardView
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/add_device"
-            android:elevation="30dp"
+            app:cardElevation="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/show_device"
@@ -51,7 +51,7 @@
                     android:layout_margin="16dp"
                     style="@style/textcostom"
                     android:gravity="center"
-                    android:text=" اضافه جهاز"
+                    android:text="@string/add_device"
                     />
 
             </LinearLayout>
@@ -64,7 +64,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/add_device"
-            android:elevation="30dp"
+            app:cardElevation="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:padding="20dp"
             android:layout_width="wrap_content"
@@ -99,7 +99,7 @@
                     android:layout_margin="16dp"
                     style="@style/textcostom"
                     android:gravity="center"
-                    android:text=" عرض جهاز"
+                    android:text="@string/showDevice"
                     />
 
             </LinearLayout>
