--- a/app/src/main/res/layout/fragment_form_device.xml
+++ b/app/src/main/res/layout/fragment_form_device.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FormDeviceFragment"
-
     >
 
     <!-- TODO: Update blank fragment layout -->
@@ -60,6 +59,7 @@
                 android:id="@+id/fromNumber"
                 style="@style/textcostom"
                 android:maxLength="9"
+                android:inputType="number"
                 />
         </com.google.android.material.textfield.TextInputLayout>
         <Button
@@ -70,7 +70,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/clear"
-
             android:id="@+id/save"/>
         <Button
             android:layout_width="wrap_content"
@@ -83,10 +82,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
 </FrameLayout>
