--- a/app/src/main/res/layout/items_devic_list.xml
+++ b/app/src/main/res/layout/items_devic_list.xml
@@ -36,7 +36,7 @@
                 style="@style/textcostom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{deviceItem.number}"
+                android:text="@{deviceItem.number.toString()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
