--- a/app/src/main/res/layout/fragment_form_device.xml
+++ b/app/src/main/res/layout/fragment_form_device.xml
@@ -38,7 +38,6 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
         <com.google.android.material.textfield.TextInputLayout
             android:layout_margin="16dp"
             android:id="@+id/la_add_number"
@@ -49,6 +48,7 @@
             android:textColorHint="@color/blue"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:layout_constraintTop_toBottomOf="@+id/la_add_device"
+            app:layout_constraintBottom_toTopOf="@+id/la_add_date"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
@@ -61,7 +61,36 @@
                 android:maxLength="9"
                 android:inputType="number"
                 />
+
         </com.google.android.material.textfield.TextInputLayout>
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_margin="16dp"
+            android:id="@+id/la_add_date"
+            app:errorEnabled="true"
+            android:hint="@string/add_date"
+            app:errorTextColor="@color/design_default_color_error"
+            android:textColorHint="@color/blue"
+            app:endIconDrawable="@drawable/date_range"
+            app:endIconMode="custom"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:layout_constraintTop_toBottomOf="@+id/la_add_number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/fromDate"
+            style="@style/textcostom"
+            android:inputType="date"
+            />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
