--- a/app/src/main/res/layout/items_devic_list.xml
+++ b/app/src/main/res/layout/items_devic_list.xml
@@ -30,6 +30,17 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/text_date"
+                style="@style/textcostom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{deviceItem.date}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/text_name"
+                app:layout_constraintEnd_toEndOf="@+id/text_numer"
+                app:layout_constraintTop_toTopOf="parent" />
+
 
             <TextView
                 android:id="@+id/text_numer"
